tests/codegen-anf/pass/010-xor.hyg
assert(true xor false);
assert(false xor true);
assert(false xor true and true);
assert(true xor false and true);
assert(true and false xor true);
assert(true xor false xor false)
