tests/codegen-anf/fail/001-and-not.hyg
assert(true and not true)